--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ rand = "0.4"
 serde_json = { version = "1.0" }
 tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }
 
+libc = "0.2"
+
 [profile.release]
 panic = "abort"
 
